--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mocha": "^2.2.41",
     "chai": "^4.1.0",
     "del": "^3.0.0",
+    "favicons": "^4.8.6",
     "gulp": "^3.9.1",
     "gulp-mocha": "^4.3.1",
     "gulp-sourcemaps": "^2.6.0",
