--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/unitejs/image-cli#readme",
   "devDependencies": {
     "@types/chai": "^4.0.1",
+    "@types/jimp": "^0.2.1",
     "@types/mocha": "^2.2.41",
     "chai": "^4.1.0",
     "del": "^3.0.0",
@@ -35,6 +36,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.1.1",
     "gulp-typescript": "^3.2.1",
+    "jimp": "^0.2.28",
     "merge2": "^1.1.0",
     "run-sequence": "^2.0.0",
     "tslint": "^5.5.0",
