--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unitejs-image-cli",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Command line interface to the UniteJS image tool library",
   "main": "dist/unitejs-image-cli.js",
   "repository": {
@@ -10,10 +10,12 @@
   "keywords": [
     "unite",
     "unitejs",
+    "image",
     "cli",
     "svg",
     "ico",
     "png",
+    "mask",
     "framework",
     "scaffolding",
     "boilerplate"
@@ -28,6 +30,7 @@
     "@types/chai": "^4.0.1",
     "@types/jimp": "^0.2.1",
     "@types/mocha": "^2.2.41",
+    "@types/phantom": "^3.2.2",
     "chai": "^4.1.0",
     "del": "^3.0.0",
     "favicons": "^4.8.6",
@@ -36,7 +39,6 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.1.1",
     "gulp-typescript": "^3.2.1",
-    "jimp": "^0.2.28",
     "merge2": "^1.1.0",
     "run-sequence": "^2.0.0",
     "tslint": "^5.5.0",
@@ -44,13 +46,13 @@
     "typescript": "^2.4.1"
   },
   "dependencies": {
-    "@types/phantom": "^3.2.2",
+    "jimp": "^0.2.28",
     "phantom": "^4.0.5",
     "unitejs-cli-core": "^0.6.0",
     "unitejs-framework": "^0.6.0",
-    "unitejs-image": "^0.0.1"
+    "unitejs-image": "^0.1.0"
   },
   "bin": {
-    "unite": "bin/unite-image.js"
+    "unite-image": "bin/unite-image.js"
   }
 }
