--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,18 +13,7 @@
         "noImplicitReturns": true,
         "strictNullChecks": false,
         "outDir": "./dist",
-        "baseUrl": ".",
-        "paths": {
-            "unitejs-framework/*": [
-                "node_modules/unitejs-framework/*"
-            ],
-            "unitejs-image/*": [
-                "node_modules/unitejs-image/*"
-            ],
-            "unitejs-cli-core/*": [
-                "node_modules/unitejs-cli-core/*"
-            ]
-        }
+        "baseUrl": "."
     },
     "include": [
         "src/**/*",
