--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unitejs-image-cli",
   "version": "0.1.4",
   "description": "Command line interface to the UniteJS image tool library",
-  "main": "dist/unitejs-image-cli.js",
+  "main": "dist/cli.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/unitejs/image-cli.git"
@@ -35,6 +35,7 @@
     "@types/jimp": "^0.2.1",
     "@types/mocha": "^2.2.41",
     "@types/phantom": "^3.2.2",
+    "@types/sinon": "^2.3.3",
     "chai": "^4.1.1",
     "coveralls": "^2.13.1",
     "del": "^3.0.0",
@@ -48,8 +49,10 @@
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.1",
     "merge2": "^1.1.0",
+    "minimist": "^1.2.0",
     "remap-istanbul": "^0.9.5",
     "run-sequence": "^2.0.0",
+    "sinon": "^3.2.0",
     "tslint": "^5.6.0",
     "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "^2.4.1"
