--- a/package.json
+++ b/package.json
@@ -31,35 +31,36 @@
     "node": ">=8.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/jimp": "^0.2.1",
-    "@types/mocha": "^2.2.44",
-    "@types/phantom": "^3.2.3",
-    "@types/sinon": "^2.3.7",
+    "@types/chai": "^4.1.2",
+    "@types/jimp": "^0.2.28",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^9.4.0",
+    "@types/phantom": "^3.2.4",
+    "@types/sinon": "^4.1.3",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "del": "^3.0.0",
     "favicons": "^4.8.6",
     "gulp": "^3.9.1",
     "gulp-coveralls": "^0.1.4",
-    "gulp-istanbul": "^1.1.2",
+    "gulp-istanbul": "^1.1.3",
     "gulp-mocha": "3.0.0",
     "gulp-replace": "^0.6.1",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^3.2.2",
-    "merge2": "^1.1.0",
+    "gulp-typescript": "^3.2.4",
+    "merge2": "^1.2.1",
     "minimist": "^1.2.0",
-    "remap-istanbul": "^0.9.5",
-    "run-sequence": "^2.0.0",
-    "sinon": "^4.1.0",
-    "tslint": "^5.7.0",
-    "tslint-microsoft-contrib": "^5.0.1",
+    "remap-istanbul": "^0.10.1",
+    "run-sequence": "^2.2.1",
+    "sinon": "^4.2.2",
+    "tslint": "^5.9.1",
+    "tslint-microsoft-contrib": "^5.0.2",
     "typescript": "2.6.2"
   },
   "dependencies": {
     "jimp": "^0.2.28",
-    "phantom": "^4.0.5",
+    "phantom": "^4.0.12",
     "unitejs-cli-core": "^1.0.0",
     "unitejs-framework": "^1.0.0",
     "unitejs-image": "^1.0.0"
