Updated travis to pull deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,23 @@ language: node_js
 node_js:
   - 9
 install:
+  - cd ..
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/framework.git unitejs-framework
+  - cd unitejs-framework
+  - npm link
+  - cd ..
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/cli-core.git unitejs-cli-core
+  - cd unitejs-cli-core
+  - npm link unitejs-framework
+  - npm link
+  - cd ..
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/image.git unitejs-image
+  - cd unitejs-image
+  - npm link unitejs-framework
+  - npm link
+  - cd ../image
+  - npm install gulp -g
+  - npm link unitejs-framework unitejs-cli-core unitejs-image
   - npm install
 script: 
   - gulp build || travis_terminate 1
