--- a/package.json
+++ b/package.json
@@ -34,27 +34,27 @@
         "@types/chai": "^4.1.3",
         "@types/jimp": "^0.2.28",
         "@types/mocha": "^5.2.0",
-        "@types/node": "^9.6.7",
+        "@types/node": "^10.1.0",
         "@types/phantom": "^3.2.4",
-        "@types/sinon": "^4.3.1",
+        "@types/sinon": "^4.3.3",
         "chai": "^4.1.2",
-        "coveralls": "^3.0.0",
+        "coveralls": "^3.0.1",
         "del": "^3.0.0",
         "favicons": "^5.1.1",
         "gulp": "^3.9.1",
         "gulp-coveralls": "^0.1.4",
         "gulp-istanbul": "^1.1.3",
-        "gulp-mocha": "3.0.0",
-        "gulp-replace": "^0.6.1",
+        "gulp-mocha": "^3.0.1",
+        "gulp-replace": "^1.0.0",
         "gulp-sourcemaps": "^2.6.4",
         "gulp-tslint": "^8.1.3",
         "gulp-typescript": "^4.0.2",
-        "merge2": "^1.2.1",
+        "merge2": "^1.2.2",
         "minimist": "^1.2.0",
         "remap-istanbul": "^0.11.1",
         "run-sequence": "^2.2.1",
-        "sinon": "^4.5.0",
-        "tslint": "^5.9.1",
+        "sinon": "^5.0.7",
+        "tslint": "^5.10.0",
         "tslint-microsoft-contrib": "^5.0.3",
         "typescript": "^2.8.3"
     },
