--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "@types/mocha": "^5.2.0",
         "@types/node": "^10.1.0",
         "@types/phantom": "^3.2.4",
-        "@types/sinon": "^4.3.3",
+        "@types/sinon": "^5.0.1",
         "chai": "^4.1.2",
         "coveralls": "^3.0.1",
         "del": "^3.0.0",
@@ -44,7 +44,7 @@
         "gulp": "^3.9.1",
         "gulp-coveralls": "^0.1.4",
         "gulp-istanbul": "^1.1.3",
-        "gulp-mocha": "^3.0.1",
+        "gulp-mocha": "3.0.1",
         "gulp-replace": "^1.0.0",
         "gulp-sourcemaps": "^2.6.4",
         "gulp-tslint": "^8.1.3",
@@ -53,14 +53,14 @@
         "minimist": "^1.2.0",
         "remap-istanbul": "^0.11.1",
         "run-sequence": "^2.2.1",
-        "sinon": "^5.0.7",
+        "sinon": "^6.1.4",
         "tslint": "^5.10.0",
         "tslint-microsoft-contrib": "^5.0.3",
-        "typescript": "^2.8.3"
+        "typescript": "^3.0.1"
     },
     "dependencies": {
-        "jimp": "^0.2.28",
-        "phantom": "^4.0.12",
+        "jimp": "^0.3.2",
+        "phantom": "^6.0.3",
         "unitejs-cli-core": "^1.1.4",
         "unitejs-framework": "^1.0.4",
         "unitejs-image": "^1.0.1"
