--- a/package.json
+++ b/package.json
@@ -31,38 +31,38 @@
         "node": ">=8.0.0"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.7",
-        "@types/mocha": "^5.2.0",
-        "@types/node": "^10.12.18",
-        "@types/phantom": "^3.2.4",
-        "@types/sinon": "^7.0.2",
-        "chai": "^4.1.2",
-        "coveralls": "^3.0.1",
-        "del": "^3.0.0",
-        "favicons": "^5.3.0",
+        "@types/chai": "4.1.7",
+        "@types/mocha": "5.2.0",
+        "@types/node": "10.12.18",
+        "@types/phantom": "3.2.4",
+        "@types/sinon": "7.0.2",
+        "chai": "4.1.2",
+        "coveralls": "3.0.1",
+        "del": "3.0.0",
+        "favicons": "5.3.0",
         "gulp": "3.9.1",
-        "gulp-coveralls": "^0.1.4",
-        "gulp-istanbul": "^1.1.3",
+        "gulp-coveralls": "0.1.4",
+        "gulp-istanbul": "1.1.3",
         "gulp-mocha": "3.0.1",
-        "gulp-replace": "^1.0.0",
-        "gulp-sourcemaps": "^2.6.4",
-        "gulp-tslint": "^8.1.3",
-        "gulp-typescript": "^5.0.0",
-        "merge2": "^1.2.3",
-        "minimist": "^1.2.0",
-        "remap-istanbul": "^0.12.0",
-        "run-sequence": "^2.2.1",
-        "sinon": "^7.2.2",
-        "tslint": "^5.12.0",
-        "tslint-microsoft-contrib": "^6.0.0",
-        "typescript": "^3.2.2"
+        "gulp-replace": "1.0.0",
+        "gulp-sourcemaps": "2.6.4",
+        "gulp-tslint": "8.1.3",
+        "gulp-typescript": "5.0.0",
+        "merge2": "1.2.3",
+        "minimist": "1.2.0",
+        "remap-istanbul": "0.12.0",
+        "run-sequence": "2.2.1",
+        "sinon": "7.2.2",
+        "tslint": "5.12.0",
+        "tslint-microsoft-contrib": "6.0.0",
+        "typescript": "3.2.2"
     },
     "dependencies": {
-        "jimp": "^0.2.28",
-        "phantom": "^6.0.3",
-        "unitejs-cli-core": "^1.1.5",
-        "unitejs-framework": "^1.0.5",
-        "unitejs-image": "^1.0.2"
+        "jimp": "0.2.28",
+        "phantom": "6.0.3",
+        "unitejs-cli-core": "1.1.5",
+        "unitejs-framework": "1.0.5",
+        "unitejs-image": "1.0.2"
     },
     "bin": {
         "unite-image": "bin/unite-image.js"
